# sniffit

./: .gitignore  AUTHORS  CHANGELOG  CONTRIBUTING.md  CREDITS  HISTORY  IMPORTANT  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.orig  Makepatch.0.3.1  Makepatch.0.3.2  PLUGIN-HOWTO  README.0.3.1  README.0.3.1.orig  README.0.3.2  README.FIRST  README.FIRST.orig  README.md  autogen.sh  c_patch.0.3.1  c_patch.0.3.2  config.h  config.h.orig  configure  configure.ac  configure.in  detect_system  detect_system.orig  dns_plugin.plug  dummy_plugin.plug  h_patch.0.3.1  h_patch.0.3.2  packets.h  sample_config_file  sample_config_file.orig  sn_analyse.c  sn_cfgfile.c  (+34 more)
.github/workflows/: ccpp.yml  full-check.yml
docs/: PLUGIN-HOWTO  README.FIRST  UPDATE-CHECK  sniffit-FAQ
docs/old-docs/: BETA-TESTING
examples/: sample_config_file
libpcap/: CHANGES  INSTALL  Makefile  aclocal.m4  gencode.c  nametoaddr.c  pcap-bpf.c  pcap-null.c  pcap.c
libpcap-0.3/: Makefile
libpcap-0.3/linux-include/netinet/: ip_var.h
man/: sniffit.5  sniffit.8
src/: Makefile.am  dns_plugin.plug  sn_analyse.c  sn_cfgfile.c  sn_cfgfile.h  sn_config.h  sn_conn_desc.c  sn_data.h  sn_defines.h  sn_generation.c  sn_generation.h  sn_global.h  sn_interface.c  sn_interface.h  sn_logfile.c  sn_logfile.h  sn_packets.c  sn_packets.h  sn_packetstructs.h  sn_plugins.h  sn_resolv.c  sn_structs.h  sniffit.c  sniffit.h
