# Makefile.am for sniffit
# Copyright 2016 Joao Eriberto Mota Filho
# Under BSD-3-CLause license.

SUBDIRS = src

man_MANS = man/sniffit.5 man/sniffit.8

clean:
	rm -f src/*.o
	rm -f src/sniffit

clean-local:
	rm -f aclocal.m4
	rm -f compile
	rm -f configure
	rm -f config.cache
	rm -f config.log
	rm -f config.status
	rm -f depcomp
	rm -f install-sh
	rm -f Makefile
	rm -f Makefile.in
	rm -f missing
	rm -f stamp-h1
	rm -rf autom4te.cache
	rm -rf config.h*
	rm -rf src/.deps
	rm -f src/Makefile
	rm -f src/Makefile.in
